--- a/geomatica/core/templates/map_location.html
+++ b/geomatica/core/templates/map_location.html
@@ -1,26 +1,48 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <style type="text/css">
-      html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
+{% block style %}
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
     </style>
-  </head>
-  <body>
+{% endblock %}
+{% block contenido %}
     <div id="map"></div>
-    <script type="text/javascript">
+{% endblock %}
+{% block script %}
+  <script>
 
-var map;
-function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: -34.397, lng: 150.644},
-    zoom: 8
-  });
+  function initMap() {
+    var pyrmont = new google.maps.LatLng({{ latitud }}, {{ longitud }});
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: pyrmont,
+      zoom: 15
+    });
+
+    var request = {
+    location: pyrmont,
+    radius: '500',
+    types: ['store']
+  };
+
+  service = new google.maps.places.PlacesService(map);
+  service.nearbySearch(request, callback);
+}
+function callback(results, status) {
+  if (status == google.maps.places.PlacesServiceStatus.OK) {
+    for (var i = 0; i < results.length; i++) {
+      var place = results[i];
+      createMarker(results[i]);
+    }
+  }
 }
 
     </script>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5TqLnWHMFlFSxufxXOEJK7jp-J3_isJY&callback=initMap">
-    </script>
-  </body>
-</html>
+    <script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5TqLnWHMFlFSxufxXOEJK7jp-J3_isJY&signed_in=true&libraries=places&callback=initMap" async defer></script>
+{% endblock %}
+  
