--- a/geomatica/core/templates/map_location.html
+++ b/geomatica/core/templates/map_location.html
@@ -15,32 +15,58 @@
 {% endblock %}
 {% block script %}
   <script>
+function initMap() {
+  var myLatLng = {lat: {{ latitud }}, lng: {{ longitud }}};
 
-  function initMap() {
-    var pyrmont = new google.maps.LatLng({{ latitud }}, {{ longitud }});
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: pyrmont,
-      zoom: 15
-    });
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 15,
+    center: myLatLng
+  });
 
-    var request = {
-    location: pyrmont,
-    radius: '500',
-    types: ['store']
-  };
-
-  service = new google.maps.places.PlacesService(map);
-  service.nearbySearch(request, callback);
+  var marker = new google.maps.Marker({
+    position: myLatLng,
+    map: map,
+    title: 'Hello World!'
+  });
 }
-function callback(results, status) {
-  if (status == google.maps.places.PlacesServiceStatus.OK) {
-    for (var i = 0; i < results.length; i++) {
-      var place = results[i];
-      createMarker(results[i]);
-    }
+
+
+
+
+
+
+/**
+var citymap = {
+  hueco: {
+    center: {lat: {{ latitud }}, lng: {{ longitud }}},
+    population: 10
   }
-}
+};
 
+function initMap() {
+  // Create the map.
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 12,
+    center: {lat: 4.5694082, lng: -74.12630100000001},
+    mapTypeId: google.maps.MapTypeId.TERRAIN
+  });
+
+  // Construct the circle for each value in citymap.
+  // Note: We scale the area of the circle based on the population.
+  for (var city in citymap) {
+    // Add the circle for this city to the map.
+    var cityCircle = new google.maps.Circle({
+      strokeColor: '#FF0000',
+      strokeOpacity: 0.8,
+      strokeWeight: 2,
+      fillColor: '#FF0000',
+      fillOpacity: 0.35,
+      map: map,
+      center: citymap[city].center,
+      radius: Math.sqrt(citymap[city].population) * 100
+    });
+  }
+}*/
     </script>
     <script
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5TqLnWHMFlFSxufxXOEJK7jp-J3_isJY&signed_in=true&libraries=places&callback=initMap" async defer></script>
