se adiciona la visalizacion en lista de las notificaciones y el guardado en la bd

--- a/geomatica/core/templates/from_coord.html
+++ b/geomatica/core/templates/from_coord.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block contenido %}
+{{ msg }}
 <form action="{% url 'core:enviar_notificacion_hueco' %}" method="POST">
 	{% csrf_token %}
 	{{ form }}
