--- a/geomatica/core/static/scss/app.scss
+++ b/geomatica/core/static/scss/app.scss
@@ -55,6 +55,8 @@ $verde-3: #004D00;
 $boton-nav: #fff;
 $texto-negro: #333;
 
+$azul-1: #008CBA;
+
 
 html,
 body {
@@ -67,41 +69,32 @@ div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, t
 }
 
 body {
-
-
 }
 
 a:hover {
     cursor: pointer;
 }
 
-
 @media #{$small-up} {
     body {
         h1, h2, h3, h4, h5 {
-            color: white;
+            color: black;
             text-align: center;
             font-family: $oswald;
         }
-        .title-1 {
-            background: $verde-1;
-            min-height: 120px;
-            padding-top: 35px; 
-            h2 {
-                font-size: 2rem;
-            }
+        .title {
+            margin-top: 30px;
+            padding: 10px;
+            color: $azul-1; 
         }
-        .title-2 {
-            background: $verde-2;
-            min-height: 40px;
-            padding-top: 3px;
+        #img_hueco {
+            max-height: 390px;
+            padding-bottom: 30px;
+        } 
+        #map {
+            height: 100%;
+            width: 500px;
         }
-        .g-grafica{
-            width: 230px;
-            height: 150px; 
-            background-color: whitesmoke;
-        }
-
     }
 }
 
