--- a/geomatica/core/templates/from_coord.html
+++ b/geomatica/core/templates/from_coord.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% block contenido %}
 <div class="row">
-  <div class="small-12 medium-10 small-centered columns">
+  <div class="small-12 medium-6 small-centered columns">
+  <br>
+  <h5>Ingrese la ubicación exacta del húeco, latitud, longitud, dirreción. </h5>
+  <hr>
     {{ msg }}
     {% if form %}
     <form action="{% url 'core:enviar_notificacion_hueco' %}" method="POST">
@@ -12,13 +15,11 @@
             <input type="submit" value="Enviar" class="expanded button" />
           </div>
           <div class="small-6 columns">
-            <input type="button" value="Mi ubicación" class="expanded button secondary" />
+            <input id="mi_ubicacion" type="button" value="Mi ubicación" class="expanded button secondary" />
           </div>
         </div>        
     </form>
-    <div id='ubicacion'> 
-      Aqui estara tu ubicacion 
-    </div>
+    
     {% endif %}
     {% endblock %}
   </div>  
