expand button notificacion nueva

--- a/geomatica/core/templates/from_coord.html
+++ b/geomatica/core/templates/from_coord.html
@@ -12,10 +12,10 @@
       {{ form }}
         <div class="row">
           <div class="small-6 columns">
-            <input type="submit" value="Enviar" class="expanded button" />
+            <input type="submit" value="Enviar" class="expand button" />
           </div>
           <div class="small-6 columns">
-            <input id="mi_ubicacion" type="button" value="Mi ubicación" class="expanded button secondary" />
+            <input id="mi_ubicacion" type="button" value="Mi ubicación" class="expand button secondary" />
           </div>
         </div>        
     </form>
