--- a/geomatica/core/static/scss/app.scss
+++ b/geomatica/core/static/scss/app.scss
@@ -69,6 +69,8 @@ div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, t
 }
 
 body {
+    width: 100%;
+    height: 100%;
 }
 
 a:hover {
@@ -77,6 +79,10 @@ a:hover {
 
 @media #{$small-up} {
     body {
+        .container{
+            height: 100%;
+            width: 100%;
+        }
         h1, h2, h3, h4, h5 {
             color: black;
             text-align: center;
@@ -91,9 +97,9 @@ a:hover {
             max-height: 390px;
             padding-bottom: 30px;
         } 
-        #map {
+        #map, #map2 {
             height: 100%;
-            width: 500px;
+            width: 100%;
         }
     }
 }
