--- a/geomatica/core/templates/base.html
+++ b/geomatica/core/templates/base.html
@@ -28,6 +28,7 @@
 	</div>
 	<script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
 	<script src="{% static 'bower_components/foundation/js/foundation.min.js' %}"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5TqLnWHMFlFSxufxXOEJK7jp-J3_isJY&signed_in=true&libraries=places&callback=initMap" async defer></script>
 	<script src="{% static 'js/app.js' %}"></script>
 
 	{% block script %}
