se centra en la estadistica

--- a/geomatica/core/templates/estadisticas_hueco.html
+++ b/geomatica/core/templates/estadisticas_hueco.html
@@ -26,7 +26,8 @@
 var citymap = {
   chicago: {
     center: {lat: {{ latitud }}, lng: {{ longitud }} },
-    population: 8
+    population: 8,
+    title: 2
   },
   
 };
