--- a/geomatica/core/templates/lista_notificacion.html
+++ b/geomatica/core/templates/lista_notificacion.html
@@ -1,28 +1,45 @@
 {% extends 'base.html' %}
+
 {% block contenido %}
 <div class="row">
 	<div class="small-12 small-centered columns">
-		<table role="grid">
+		<div class="tabla"> 
+			<table role="grid">
 			<thead>
 				<tr>
+					<td>Hueco</td>
 					<td>Direccion</td>
 					<td>latitud</td>
 					<td>longitud</td>
 					<td>Especifico</td>
 					<td>Estadisticas</td>
+					
 				</tr>
 			</thead>
 			{% for notificacion in lista %}
+			
 				<tr>
+					<td class="img-hueco" id="img-id"><a href="#" data-reveal-id="myModal"><img src="../core/media/{{notificacion.foto}}" ></a></td>
 					<td>{{ notificacion.direccion }}</td>
 					<td>{{ notificacion.latitud }}</td>
 					<td>{{ notificacion.longitud }}</td>
 					<td> <a href="{% url 'core:especifico_notificacion' %}?identificador={{ notificacion.id }}">ver</a> </td>
 					<td> <a href="{% url 'core:estadisticas_hueco' %}?identificador={{ notificacion.id }}">Estadistica</a> </td>
+					
 				</tr>
+				
 			{% endfor %}
 		</table>
+		</div>
+		
 	</div>	
 </div>
 
 {% endblock %}
+
+<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+  <h2 id="modalTitle">Awesome. I have it.</h2>
+  <p class="lead">Your couch.  It is mine.</p>
+  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+  <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+</div>
