--- a/geomatica/core/templates/index.html
+++ b/geomatica/core/templates/index.html
@@ -13,6 +13,9 @@
     <form method="GET" action="{% url 'core:enviar_notificacion_hueco' %}">{% csrf_token %}
     	<button class="button expand" type="submit">Notificar un hueco</button>
     </form>
+    <form method="GET" action="{% url 'core:reportar_robo' %}">{% csrf_token %}
+      <button class="button expand" type="submit">Reportar Robo</button>
+    </form>
   </div>
 </div>
 {% endblock %}
