se adiciona funcionalidad para visualizancion de robos en lista y en mapa

--- a/geomatica/core/templates/index.html
+++ b/geomatica/core/templates/index.html
@@ -16,6 +16,9 @@
     <form method="GET" action="{% url 'core:reportar_robo' %}">{% csrf_token %}
       <button class="button expand" type="submit">Reportar Robo</button>
     </form>
+    <form method="GET" action="{% url 'core:lista_robo' %}">
+      <button class="button expand" type="submit">Listar Robos</button>
+    </form>
   </div>
 </div>
 {% endblock %}
